--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+# Angular environment files
+/src/environments/environment.ts
+
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
